# rust-office-suite

./: .gitignore  Cargo.toml  README.md  build.bat  implementation_plan.md  rustfmt.toml
.github/workflows/: ci.yml
apps/calc/: Cargo.toml
apps/calc/src/: app.rs  cell.rs  grid.rs  main.rs  sheet.rs
apps/calc/src/formula/: evaluator.rs  functions.rs  mod.rs  parser.rs
apps/launcher/: Cargo.toml
apps/launcher/src/: main.rs
apps/writer/: Cargo.toml
apps/writer/src/: app.rs  doc_model.rs  layout.rs  main.rs  text_buffer.rs
apps/writer/tests/: writer_integration.rs
installer/wix/: License.rtf  main.wxs
libs/libformat_rs/: Cargo.toml
libs/libformat_rs/benches/: pdf_bench.rs
libs/libformat_rs/src/: csv.rs  docx.rs  lib.rs  ods.rs  odt.rs  plaintext.rs  xlsx.rs
libs/libsal_rs/: Cargo.toml
libs/libsal_rs/src/: fs.rs  lib.rs  platform.rs
libs/libsfx2_rs/: Cargo.toml
libs/libsfx2_rs/src/: command.rs  document.rs  lib.rs  undo.rs
libs/libtools_rs/: Cargo.toml
libs/libtools_rs/src/: color.rs  lib.rs  rect.rs  units.rs
libs/libvcl_rs/: Cargo.toml
libs/libvcl_rs/src/: event.rs  lib.rs  renderer.rs  widget.rs  window.rs
