[package]
name = "libvcl_rs"
version = "0.1.0"
edition = "2021"
description = "Visual Class Library — WGPU-based rendering and widget toolkit"

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
libtools_rs = { path = "../libtools_rs" }
